Tue Nov 18 12:07:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3108_Regression/run_test.pl:
          Use the correct perl variable to delete the file

Tue Nov 18 10:39:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_helper.cpp:
          Reverted change of Oct 13 to convert format specifiers to
          plain ascii, let us see if this resolves the 64bit compile
          warnings

Tue Nov 18 10:20:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2560_Regression/client.cpp:
          No need to convert for string_to_object

        * tests/Bug_2560_Regression/run_test.pl:
          Corrected client argument and increased server timeout

        * tests/Bug_2560_Regression/server.cpp:
          Parse the commandline arguments

Tue Nov 18 09:52:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3299_Regression/server.cpp:
          Layout change

        * tests/Bug_933_Regression/MessengerClient.cpp:
        * tests/Bug_933_Regression/MessengerServer.cpp:
          Add support for commandline arguments to specify the IOR files

Mon Nov 17 21:26:33 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/tao_idl.mpc:

          s/gperf/ace_gperf/  It was renamed a while ago but this file
          wasn't changed.

Mon Nov 17 18:44:15 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/PolicyS.h:

          Add a #include of tao/PortabServer/PolicyS.h.

        * tests/Bug_3513_Regression/test.cpp:

          Whitespace.

        * tests/Bug_3514_Regression:
        * tests/Bug_3514_Regression/Bug_3514_Regression.mpc:
        * tests/Bug_3514_Regression/README:
        * tests/Bug_3514_Regression/test.idl:
        * tests/Bug_3514_Regression/test.cpp:

          Regression test for the above fix.

Mon Nov 17 18:01:17 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/util/utl_global.cpp:
